ClipIt-v1.3.4-26112010001 - 26 Nov. 2010
	+ Fixed: Now we are warning the user that his history is saved in a
			plain text file and ask for his explicit permission
			to save the history.
	+ Fixed: When the user disables history saving we also ask if he wants
			to empty the current history file.
	+ Fixed: Renamed "Find" menu entry to "Manage history".
	+ Fixed: ClipIt now complies to the "XDG Base Directory Specification".

ClipIt-v1.3.3-23112010001 - 23 Nov. 2010
	+ Fixed: Fixed some more markup.
	+ Fixed: Rearranged parts of the Preferences dialog to be cleaner.
	+ Fixed: Fixed bug in "Manage History" window not selecting the history
			item properly.

ClipIt-v1.3.2-22112010001 - 22 Nov. 2010
	+ Fixed: Fixed most of the markup and indentation (replaced double spaces
			with tabs).
	+ Fixed: Removed clipboard restoring from history, as this seems to cause
			more problems than it solves.

ClipIt-v1.3.1-17112010001 - 17 Nov. 2010
	+ Added: Added autostart support for LXDE.
	+ Fixed: Fixed problem with "Edit" window not appearing.

ClipIt-v1.3.0-14112010001 - 14 Nov. 2010
	+ Added: Added "Edit" and "Remove" buttons to the "Manage History" dialog.
	+ Fixed: Major speed improvements for big history entries while:
			searching through the history;
			populating the "Manage History" dialog;
			generating the popup menus;
		All of these should now be more than 99% faster, at the expense
		of an (at most) 1MB overhead. I think it's worth it, though.
	+ Fixed: Fixed a drawing issue with the small history menu when activated
			by clicking on the systray icon.

ClipIt-v1.2.6-12112010003 - 12 Nov. 2010
	+ Fixed: Removed reference to pthread.h from configure.in.
	+ Fixed: Set AM_MAINTAINER_MODE to disabled by default.

ClipIt-v1.2.5-12112010002 - 12 Nov. 2010
	+ Fixed: Now using autopoint instead of gettextize to avoid waiting for
			user input.
	+ Fixed: Added AM_MAINTAINER_MODE, to get rid of the disable-maintainer-mode
			warning.
	+ Fixed: Fixed a small typo in main.c.